@@ -55,7 +55,9 @@ and should not be de-allocated by the caller.  The list returned should not be
 assumed to be in any particular order, although it is guaranteed to be in the
 same order as the list returned by
 .BR get_constant_list (3).
-The array is unterminated.
+The array is unterminated.  The number of values in the array can be obtained
+from a call to
+.BR get_nfields_by_type (3).
 
 The caller may not modify any values in the array, or the array itself.  Doing
 so may cause database corruption.  The pointer returned is guaranteed to be
@@ -97,4 +99,5 @@ a call to
 .BR getdata (3),
 .BR get_constant_list (3),
 .BR get_error (3),
-.BR get_error_string (3)
+.BR get_error_string (3),
+.BR get_nfields_by_type (3)
