@@ -20,7 +20,7 @@
 .\" with GetData; if not, write to the Free Software Foundation, Inc.,
 .\" 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 .\"
-.TH get_nfields 3 "6 October 2008" "Version 0.4.0" "GETDATA"
+.TH get_nfields 3 "7 October 2008" "Version 0.4.0" "GETDATA"
 .SH NAME
 get_nfields \(em report the number of fields in a dirfile
 .SH SYNOPSIS
@@ -39,7 +39,7 @@ function queries a dirfile(5) database specified by
 and returns the number of fields defined in the database.  Notably, this count
 does not include the implicit
 .I INDEX
-field.
+field, nor /META fields.
 
 The 
 .I dirfile
@@ -67,4 +67,6 @@ a call to
 .BR getdata (3),
 .BR get_error (3),
 .BR get_error_string (3),
-.BR get_field_list (3)
+.BR get_field_list (3),
+.BR get_nfields_by_type (3),
+.BR get_nvectors (3)
