@@ -1,4 +1,4 @@
-.\" get_string_list.3.  The get_string_list man page.
+.\" get_nvectors.3.  The get_nvectors man page.
 .\"
 .\" (C) 2008 D. V. Wiebe
 .\"
@@ -20,61 +20,43 @@
 .\" with GetData; if not, write to the Free Software Foundation, Inc.,
 .\" 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 .\"
-.TH get_string_list 3 "8 October 2008" "Version 0.4.0" "GETDATA"
+.TH get_nvectors 3 "7 October 2008" "Version 0.4.0" "GETDATA"
 .SH NAME
-get_string_list \(em retrieve a list of string fields in a dirfile
+get_nvectors \(em report the number of vector fields in a dirfile
 .SH SYNOPSIS
 .B #include <getdata.h>
 .HP
 .nh
 .ad l
-.BI "const char **get_string_list(DIRFILE *" dirfile );
+.BI "unsigned int get_nvectors(DIRFILE *" dirfile );
 .hy
 .ad n
 .SH DESCRIPTION
 The
-.BR get_string_list ()
+.BR get_nvectors ()
 function queries a dirfile(5) database specified by
 .I dirfile
-and returns a read-only list of names of the all
-.B STRING
-type fields defined in the database.  Notably, this list does not include
-/META subfields.
+and returns the number of vector fields defined in the database
+.RI ( ie.
+fields of types
+.BR BIT ", " LINCOM ", " LINTERP ", " MULTIPLY ", " PHASE ", and " RAW ).
+Notably, this count
+does not include the implicit
+.I INDEX
+field, nor /META fields.
 
 The 
 .I dirfile
 parameter must point to a valid DIRFILE object previously created by a call to
 .BR dirfile_open (3).
 
-The array returned will be de-allocated by a call to
-.BR dirfile_close (3)
-and should not be de-allocated by the caller.  The list returned should not be
-assumed to be in any particular order.  The array is terminated by a NULL
-pointer.  The number of strings in the array can be obtained from a call to
-.BR get_nfields_by_type (3).
-
-The caller may not modify any strings in the array, or the array itself.  Doing
-so may cause database corruption.  The pointer returned is guaranteed to be
-valid until
-.BR get_string_list ()
-is called again on the same DIRFILE object, or until the array is deallocated by
-a call to
-.BR dirfile_close (3).
-
-A corresponding list of string values for these fields may be obtained by
-calling
-.BR get_string_values (3).
-
 .SH RETURN VALUE
 Upon successful completion,
-.BR get_string_list ()
-returns a pointer to an array of strings containing the names of all the fields
-defined in the dirfile database.  On error it returns NULL and sets the dirfile
-error to a non-zero error value.  Possible error values are:
+.BR get_nvectors ()
+returns the number of vector fields in the dirfile.  On error, it
+returns zero and sets the dirfile error
+to a non-zero error value.  Possible error values are:
 .TP 8
-.B GD_E_ALLOC
-The library was unable to allocate memory.
-.TP
 .B GD_E_BAD_DIRFILE
 The supplied dirfile was invalid.
 .P
@@ -89,6 +71,5 @@ a call to
 .BR getdata (3),
 .BR get_error (3),
 .BR get_error_string (3),
-.BR get_field_list (3),
-.BR get_nfields_by_type (3),
-.BR get_string_values (3)
+.BR get_nfields (3),
+.BR get_vector_list (3)
