@@ -52,7 +52,9 @@ and should not be de-allocated by the caller.  The list returned should not be
 assumed to be in any particular order, although it is guaranteed to be in the
 same order as the list returned by
 .BR get_string_list (3).
-The array is terminated by a NULL pointer.
+The array is terminated by a NULL pointer.  The number of strings in the array
+can be obtained from a call to
+.BR get_nfields_by_type (3).
 
 The caller may not modify any strings in the array, or the array itself.  Doing
 so may cause database corruption.  The pointer returned is guaranteed to be
@@ -90,4 +92,5 @@ a call to
 .BR getdata (3),
 .BR get_error (3),
 .BR get_error_string (3),
+.BR get_nfields_by_type (3),
 .BR get_string_list (3)
