@@ -54,7 +54,8 @@ The array returned will be de-allocated by a call to
 .BR dirfile_close (3)
 and should not be de-allocated by the caller.  The list returned should not be
 assumed to be in any particular order.  The array is terminated by a NULL
-pointer.
+pointer.  The number of strings in the array can be obtained from a call to
+.BR get_nvectors (3).
 
 The caller may not modify any strings in the array, or the array itself.  Doing
 so may cause database corruption.  The pointer returned is guaranteed to be
@@ -88,4 +89,5 @@ a call to
 .BR getdata (3),
 .BR get_error (3),
 .BR get_error_string (3),
-.BR get_field_list (3)
+.BR get_field_list (3),
+.BR get_nvectors (3)
